--- a/src/app/components/icons/icons.css
+++ b/src/app/components/icons/icons.css
@@ -3,28 +3,30 @@
   line-height: 0px;
 }
 
-.settings-icon {
+.icon.medium {
   font-size: 48px;
-  line-height: 0px;
 }
 
-.small-icon {
+.icon.large {
+  font-size: 82px;
+}
+
+/* some icons need visual size adjustment */
+.icon.adjusted {
   font-size: 42px;
-  line-height: 0px;
 }
 
-.white {
-  color: #ffffff;
+.rotate {
+  animation-name: ckw;
+  animation-duration: 4s;
+  animation-iteration-count: infinite;
+  display: inline-block;
 }
-
-.dark-green {
-  color: #086108ec;
-}
-
-.red {
-  color: rgb(221, 25, 25);
-}
-
-.dark-red {
-  color: rgb(122, 2, 2);
+@keyframes ckw {
+  70% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
