--- a/src/app/components/header-footer/header-footer.css
+++ b/src/app/components/header-footer/header-footer.css
@@ -2,7 +2,7 @@
   max-width: 768px;
   margin: auto;
   height: 100%;
-  padding: 0px 7px;
+  padding: 0px 6px;
 }
 
 header {
@@ -19,4 +19,8 @@ footer {
   padding: 1px 5px;
   border-top: 1px solid rgb(0, 0, 0);
   color: aliceblue;
+}
+
+h1 {
+  font-size: 1.35em;
 }
