--- a/src/app/components/icons/icons.css
+++ b/src/app/components/icons/icons.css
@@ -17,7 +17,7 @@
 }
 
 .rotate {
-  animation-name: ckw;
+  animation-name: rotate;
   animation-duration: 4s;
   animation-iteration-count: infinite;
   display: inline-block;
@@ -43,5 +43,22 @@
   }
   100% {
     transform: rotate(360deg);
+  }
+}
+
+.fade-in {
+  opacity: 1;
+  animation-name: fadeInOpacity;
+  animation-iteration-count: 1;
+  animation-timing-function: ease-in;
+  animation-duration: 0.2s;
+}
+
+@keyframes fadeInOpacity {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
