--- a/src/app/components/flashcards-page/flash-cards.css
+++ b/src/app/components/flashcards-page/flash-cards.css
@@ -56,7 +56,7 @@
 
 .score-box {
   border: 1px solid grey;
-  background-color: lightgreen;
+  background-color: #cbf1cb;
   border-radius: 12px;
   padding: 1em 0;
   margin: 0 auto;
