Add loading-container class

--- a/src/app/app.css
+++ b/src/app/app.css
@@ -83,6 +83,11 @@ footer {
   text-decoration: none;
 }
 
+.loading-container {
+  text-align: center;
+  padding-top: 6em;
+}
+
 /* APP colors */
 .white {
   color: #ffffff;
