--- a/src/app/components/authentication-pages/authentication.css
+++ b/src/app/components/authentication-pages/authentication.css
@@ -14,3 +14,38 @@
 a {
   text-decoration: none;
 }
+
+.auth-button {
+  display: block;
+  margin: 15px auto 0px;
+  padding: 2% 10%;
+
+  border-radius: 6px;
+  border: 1px solid #2c2a2a;
+
+  font-size: large;
+  font-weight: bolder;
+  color: rgb(228, 236, 230);
+  background-color: rgb(114, 143, 133);
+
+  cursor: pointer;
+}
+
+.auth-button:hover {
+  box-shadow: -2px -2px 5px rgb(157, 167, 159) inset;
+  border-color: rgb(246, 247, 248);
+
+  color: aliceblue;
+}
+
+.auth-button:disabled {
+  box-shadow: -2px -2px 5px rgb(157, 167, 159) inset;
+  border-color: rgb(246, 247, 248);
+
+  color: rgb(5, 5, 5);
+}
+
+.auth-error {
+  text-align: center;
+  color: red;
+}
