--- a/src/app/components/authentication-pages/authentication.css
+++ b/src/app/components/authentication-pages/authentication.css
@@ -29,3 +29,10 @@ a {
   padding-top: 10%;
   margin-bottom: 1em;
 }
+
+.update-profile-user {
+  font-size: 1.5em;
+  font-weight: bolder;
+  text-align: center;
+  margin-bottom: 1em;
+}
