--- a/src/app/components/buttons/buttons.css
+++ b/src/app/components/buttons/buttons.css
@@ -76,6 +76,11 @@
   cursor: pointer;
 }
 
+.question-buttons:hover {
+  box-shadow: -2px -2px 5px rgb(157, 167, 159) inset;
+  border-color: rgb(246, 247, 248);
+}
+
 .but-delete {
   color: rgb(253, 250, 250);
   font-weight: bolder;
