--- a/src/app/components/edit-pages/edit.css
+++ b/src/app/components/edit-pages/edit.css
@@ -77,6 +77,7 @@
 .edit-page-buttons.new {
   border-radius: 6px;
   border: 1px solid #0b35a0;
+  margin-top: 15px;
 }
 
 .edit-page-buttons.flashcards {
