--- a/client/src/app/components/flashcards-page/flash-cards.css
+++ b/client/src/app/components/flashcards-page/flash-cards.css
@@ -1,6 +1,6 @@
 .flashcards-container {
   display: grid;
-  grid-template-rows: 60% 40%;
+  grid-template-rows: 65% 35%;
   grid-template-areas:
     "words"
     "controlButtons";
@@ -23,7 +23,10 @@
 }
 
 .word {
-  font-size: 3em;
+  display: inline-block;
+  word-break: break-word;
+
+  font-size: 6vh;
   font-weight: bolder;
   text-align: center;
 }
@@ -31,7 +34,7 @@
 .info {
   padding-top: 3%;
 
-  font-size: 1.2em;
+  font-size: 3vh;
   font-style: italic;
   text-align: center;
 }
